i font non capisco se gli ho messi a posto devo chiedere ho messo aposto le immagini nella barra di navigazione e il bottene nel create deck

--- a/Frontend/css/register.css
+++ b/Frontend/css/register.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 .container {
     width: 500px;
     height: 500px;
