--- a/Frontend/css/createdeck.css
+++ b/Frontend/css/createdeck.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
+body{
+    font: 'https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap';
+}
 .container {
     width: 1500px;
     height: 1000px;
@@ -6,11 +11,7 @@
    
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    
-    
-    
-    
-    
+       
 }
 
 
@@ -52,6 +53,10 @@ h1{
     margin-top: 50px;
     border-radius: 15px; /* Arrotonda gli angoli */
     border: 1px solid lightgrey; /* Colore e stile del bordo */
+    min-width: 1000px;
+    min-height: 200px;
+    max-width: 1000px;
+    max-height: 200px;
     
    
     
@@ -61,6 +66,7 @@ textarea::placeholder {
     text-align: left;
     vertical-align: top;
     font-size: xx-large;
+    
     
 }
 
