fix nav bar and register button

--- a/Frontend/css/login-css/login.css
+++ b/Frontend/css/login-css/login.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+  /*  padding: 1rem; */
     flex-wrap: wrap;
 }
 
@@ -35,9 +35,14 @@ body {
 }
 
 .home {
+    color:white;
    /* margin-right: auto; /* Use auto for a more fluid layout */
     margin-right: 0; /* Remove large margin */
     margin-left: 20px; /* Add a small left margin to separate from the logo */
+    text-decoration: none;
+    border: 2px solid #535353;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 .nav-pic {
