--- a/Frontend/css/user-page.css
+++ b/Frontend/css/user-page.css
@@ -50,7 +50,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+  /*  padding: 0.4rem; */
     flex-wrap: wrap;
     
 }
@@ -310,16 +310,6 @@ body {
     align-items: center;
 }
 
-.navbar {
-    background-color: #000000;
-    color: rgb(255, 255, 255); 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    flex-wrap: wrap;
-    
-}
 a {
     text-decoration: none;
 }
